--- a/Services/Catalog/FreeCourseServices.Catalog/appsettings.json
+++ b/Services/Catalog/FreeCourseServices.Catalog/appsettings.json
@@ -1,4 +1,13 @@
 {
+
+  "DatabaseSetting": {
+    "CourseCollectionName": "Courses",
+    "CategoryCollectionName": "Categories",
+    ///docker localhost bilmez o yüzden docker ile ayaðý kaldýrýrken localhostu ezmek gerekiyor
+    "ConnectionString": "mongodb://localhost:27017"
+    "DatabaseName": "CatalogDb"
+  }
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
