--- a/Services/Catalog/FreeCourseServices.Catalog/appsettings.json
+++ b/Services/Catalog/FreeCourseServices.Catalog/appsettings.json
@@ -4,7 +4,7 @@
     "CourseCollectionName": "Courses",
     "CategoryCollectionName": "Categories",
     ///docker localhost bilmez o yüzden docker ile ayaðý kaldýrýrken localhostu ezmek gerekiyor
-    "ConnectionString": "mongodb://localhost:27017"
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "CatalogDb"
   },
 
